--- a/app/src/main/res/drawable/content_container_background.xml
+++ b/app/src/main/res/drawable/content_container_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
     <corners android:radius="4dp" />
     <stroke android:width="4dp" android:color="@color/cream" />
-    <solid android:color="@color/teal_transparent"/>
+    <solid android:color="@color/teal_700"/>
     <padding android:left="20dp" android:top="20dp"
         android:right="20dp" android:bottom="20dp" />
 </shape>
