--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:alpha="0.5"
-        android:background="@color/light_blue" />
+        android:background="@color/cream" />
 
     <ProgressBar
         style="@style/Widget.AppCompat.ProgressBar"
