--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -24,13 +24,26 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/cream"
+        android:clickable="true"
+        android:layout_marginBottom="16dp"
+        android:elevation="16dp"
+        app:tint="@color/teal_700"
+        android:src="@drawable/ic_baseline_home_24"
+        app:layout_constraintBottom_toTopOf="@+id/fab"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/cream"
-        app:tint="@color/teal_700"
         android:clickable="true"
         android:elevation="16dp"
+        app:tint="@color/teal_700"
         android:src="@drawable/ic_baseline_search_24"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
