--- a/app/src/main/res/layout/similar_movie_item.xml
+++ b/app/src/main/res/layout/similar_movie_item.xml
@@ -1,79 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="120dp"
     android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="8dp">
 
-    android:layout_margin="2dp"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="4dp">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent">
 
         <ImageView
-            android:id="@+id/movieImage"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:background="@drawable/sample"
-            android:contentDescription="movie poster"
-            android:scaleType="center"
-            app:layout_constraintDimensionRatio="W,4:3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:id="@+id/content_container"
+            android:id="@+id/similarMovieImage"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintDimensionRatio="W,1:4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/movieImage" />
+            android:layout_height="wrap_content" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/movieName"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/similarTitle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="@id/content_container"
-            app:layout_constraintTop_toTopOf="@+id/content_container"
-            tools:text="Movie Name" />
+            android:layout_margin="8dp"
+            android:text="Title" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/movieRateText"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/similarImdb"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@id/content_container"
-            app:layout_constraintTop_toBottomOf="@+id/movieName"
-            tools:text="Movie Rate:" />
+            android:textColor="@color/light_red"
+            android:layout_margin="8dp"
+            android:text="IMDb: " />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/movieRate"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/similarDate"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/movieRateText"
-            app:layout_constraintTop_toBottomOf="@+id/movieName"
-            tools:text="0.0" />
+            android:layout_margin="8dp"
+            android:text="Date: " />
+    </LinearLayout>
 
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="see details"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/content_container" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
