--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,9 +11,6 @@
         android:label="Home"
         tools:layout="@layout/home_fragment">
         <action
-            android:id="@+id/action_homeFragment_to_detailFragment"
-            app:destination="@id/detailFragment" />
-        <action
             android:id="@+id/action_homeFragment_to_searchFragment"
             app:destination="@id/searchFragment" />
     </fragment>
@@ -21,15 +18,22 @@
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.project.popularmovies.ui.search.SearchFragment"
-        android:label="Search">
-    </fragment>
+        android:label="Search"/>
 
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.project.popularmovies.ui.detail.MovieDetailsFragment"
         android:label="Detail">
         <argument
-            android:name="movie_data"
-            app:argType="com.project.popularmovies.data.models.Movie" />
+            android:name="result"
+            app:argType="com.project.popularmovies.data.models.MovieCardModel"/>
     </fragment>
+
+    <action
+        android:id="@+id/movieDetailsFragment"
+        app:destination="@id/detailFragment"
+        app:enterAnim="@anim/slide_in_right"
+        app:exitAnim="@anim/slide_out_left"
+        app:popEnterAnim="@anim/slide_in_left"
+        app:popExitAnim="@anim/slide_out_right" />
 </navigation>
