--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -27,28 +27,28 @@
         android:id="@+id/fab_home"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/cream"
         android:clickable="true"
-        android:layout_marginBottom="16dp"
         android:elevation="16dp"
-        app:tint="@color/teal_700"
         android:src="@drawable/ic_baseline_home_24"
         app:layout_constraintBottom_toTopOf="@+id/fab"
-        app:layout_constraintEnd_toStartOf="@+id/guidelineRight" />
+        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+        app:tint="@color/teal_700" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/cream"
         android:clickable="true"
         android:elevation="16dp"
-        app:tint="@color/teal_700"
         android:src="@drawable/ic_baseline_search_24"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/teal_700" />
 
     <View
         android:id="@+id/circle"
